# RoboCute

./: .clangd  .gitignore  404.html  BUILD.md  CMakeLists.txt  CONNECTION_FIX_SUMMARY.md  DEBUGGING_IMPROVEMENTS.md  DEBUG_LOGGING_GUIDE.md  EDITOR_IMPLEMENTATION.md  EXECUTION_LOGGING_SUMMARY.md  FIXES_APPLIED.md  GEMINI.md  IMPLEMENTATION_COMPLETE.md  MVP_IMPLEMENTATION_SUMMARY.md  README.md  RESOURCE_IMPLEMENTATION.md  SCENE_CONTEXT_FIX.md  example_new_arch.py  generate.py  generate_stub.py  headless.py  hello_uipc.py  index.html  main.py  main_aigc.py  mkdocs.yml  pyproject.toml  setup.cmd  setup.lua  setup.sh  sitemap.xml  temp_robot_material_material.json  test_compat.py  test_mesh.bytes  test_scene.rbc  test_uipc.py  transform.py  xmake.lua
rbc/: CMakeLists.txt  generate.lua  tools.lua  xmake.lua
rbc/app/: CMakeLists.txt  xmake.lua
rbc/app/src/: camera_controller.cpp  graphics_object_types.cpp  graphics_utils.cpp  zz_pch.h
rbc/core/: CMakeLists.txt  ref_counted.h  typedefs.hpp  xmake.lua
rbc/core/include/: rbc_config.h
rbc/core/object/: class_db.hpp  object.hpp  object_id.hpp  rbctype.hpp
rbc/core/src/: bin_serde.cpp  binary_file_writer.cpp  blob.cpp  corotine.cpp  coroutine.cpp  curve.cpp  ecs.cpp  enum_serializer.cpp  func_serializer.cpp  heap_object.cpp  json_serde.cpp  memory.cpp  parse_string.cpp  quaternion.cpp  rttr.cpp  runtime_static.cpp  serde.cpp  shared_atomic_mutex.cpp  sqlite3_cpp.cpp  sqlite_cpp.cpp  state_map.cpp  thread_waiter.cpp  type.cpp  type_info.cpp  zz_pch.h
rbc/editor/: CHANGELOG.md  CMakeLists.txt  COMPARISON.md  EditorWindow.cpp  EditorWindow.hpp  ExecutionPanel.cpp  ExecutionPanel.hpp  FIXES.md  HttpClient.hpp  IMPLEMENTATION.md  MIGRATION_SUMMARY.md  MainWindow.cpp  MainWindow.h  NodeFactory.hpp  README.md  README_SCENE_SYNC.md  SCENE_SYNC_TESTING.md  VIEWPORT_INTERACTION_FEATURES.md  editor_scene.cpp  http_client.cpp  http_client.h  main.cpp  scene_sync.cpp  scene_sync.h  scene_sync_new.cpp  xmake.lua
rbc/editor/editor/: CMakeLists.txt  main.cpp  rbc_editor_module.cpp  rbc_editor_test_module.cpp  xmake.lua
rbc/editor/editor_next/: CMakeLists.txt  README.md  main.cpp  rbc_editor.qrc  xmake.lua
rbc/editor/editorx/: README.md  main_entry.cpp  rbc_editor.qrc  rbc_editor_module.cpp  rbc_editor_test_module.cpp  rbc_qml_storybook.cpp  rbc_testbed_module.cpp  xmake.lua
rbc/editor/plugins/: xmake.lua
rbc/editor/runtime/: CMakeLists.txt  rbc_editor.qrc  xmake.lua
rbc/editor/runtime_next/: README_QML.md  rbc_editor.qrc  xmake.lua
rbc/editor/runtimex/: rbc_editor.qrc  xmake.lua
rbc/editor/shaders/: quad.frag
rbc/editor/src/: EditorEngine.cpp  MainWindow.cpp  WorkflowManager.cpp  dummyapp.cpp  dummyapp.cpp.backup  dummyrt.cpp  main.cpp  naiveapp.cpp  object_types.h  pbrapp.cpp  visapp.cpp
rbc/editor/tests/: README.md  test_resources.qrc  xmake.lua
rbc/ext/: ext.cpp  xmake.lua
rbc/ext_c/: CMakeLists.txt  ext.cpp  xmake.lua
rbc/ext_c/builtin/: module_register.cpp  module_register.h  resource_bindings.cpp
rbc/ext_c/src/: ext.cpp  module_register.cpp  resource_bindings.cpp
rbc/ipc/: CMakeLists.txt  xmake.lua
rbc/ipc/src/: command_list.cpp  ipc_impl.cpp  message_manager.cpp  rpc_server.cpp  zz_pch.h
rbc/node_graph/: CMakeLists.txt  xmake.lua
rbc/node_graph/src/: device_manager.cpp  node_buffer.cpp
rbc/oidn_checker/: xmake.lua
rbc/oidn_plugin/: CMakeLists.txt  oidn_checker.cpp  xmake.lua
rbc/oidn_plugin/include/: oidn_denoiser.h
rbc/oidn_plugin/src/: oidn_denoiser.cpp
rbc/project_plugin/: xmake.lua
rbc/project_plugin/src/: project.cpp  project_plugin_impl.cpp
rbc/render_plugin/: CMakeLists.txt  xmake.lua
rbc/render_plugin/src/: accum_pass.cpp  click_manager.cpp  editing_pass.cpp  lights.cpp  offline_pt_pass.cpp  pipeline.cpp  pipeline_context.cpp  plugin_interface.cpp  post_pass.cpp  prepare_pass.cpp  pt_pipeline.cpp  raster_pass.cpp  render_plugin_impl.cpp  zz_pch.h
rbc/runtime/: CMakeLists.txt  xmake.lua
rbc/runtime/src/: dummy.cpp  zz_pch.h
rbc/samples/: xmake.lua
rbc/samples/calculator/: AdditionModel.hpp  DecimalData.hpp  DivisionModel.hpp  MultiplicationModel.hpp  SubtractionModel.hpp  xmake.lua
rbc/samples/dummy_editor/: DynamicNodeModel.cpp  DynamicNodeModel.hpp  EditorWindow.hpp  ExecutionPanel.hpp  FIXES.md  HttpClient.cpp  HttpClient.hpp  IMPLEMENTATION.md  NodeFactory.cpp  NodeFactory.hpp  QUICKSTART.md  xmake.lua
rbc/samples/resource_sample/: main.cpp  xmake.lua
rbc/samples/scene_sample/: main.cpp  xmake.lua
rbc/samples/sync_editor/: IMPLEMENTATION_SUMMARY.md  TESTING.md  editor_scene.cpp  editor_scene.h  main.cpp  scene_sync.cpp  scene_sync.h  xmake.lua
rbc/tests/: CMakeLists.txt  xmake.lua
rbc/tests/_framework/: test_util.h
rbc/tests/anim/: test_asset.cpp
rbc/tests/calculator/: CMakeLists.txt  MathOperationDataModel.hpp  NumberDisplayDataModel.hpp  main.cpp  main_entry.cpp  xmake.lua
rbc/tests/core/: simple_rtti.h  test_blob.cpp  test_concurrent_queue.cpp  test_core.cpp  test_counter.cpp  test_memory.cpp  test_rbc_new_delete.cpp  test_rc.cpp  test_rtti.cpp  test_serde.cpp
rbc/tests/editor/: xmake.lua
rbc/tests/model_viewer/: CMakeLists.txt  main.cpp  xmake.lua
rbc/tests/sample_anim/: CMakeLists.txt  main.cpp  xmake.lua
rbc/tests/test_coro/: CMakeLists.txt  main.cpp  xmake.lua
rbc/tests/test_graphics/: CMakeLists.txt  interface.cpp  jolt_component.cpp  jolt_component.h  main.cpp  object_types.cpp  object_types.h  rpc_hook_window.cpp  rpc_hook_window.h  save_image.cpp  simple_scene.cpp  simple_scene.h  utils.cpp  utils.h  world_impl.cpp  world_scene.cpp  world_scene.h  xmake.lua
rbc/tests/test_ipc/: CMakeLists.txt  main.cpp  xmake.lua
rbc/tests/test_node/: CMakeLists.txt  main.cpp  xmake.lua
rbc/tests/test_ozz/: main.cpp  xmake.lua
rbc/tests/test_pir/: main.cpp
rbc/tests/test_plugin/: main.cpp  xmake.lua
rbc/tests/test_project/: main.cpp  xmake.lua
rbc/tests/test_py_codegen/: CMakeLists.txt  main.cpp  test.py  xmake.lua
rbc/tests/test_resource/: CMakeLists.txt  (+7 more)
rbc/tool/: xmake.lua
rbc/world/: xmake.lua
rbc/world_v2/: xmake.lua
(+1551 files in other folders)
