[project]
name = "robocute"
version = "0.1.0"
description = "Make Robotics Cute!"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "requests",
    "pytest>=9.0.1",
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "pydantic>=2.0.0",
    "usd-core>=25.11",
    "numpy>=2.3.5",
    "mypy>=1.19.0",
]

[project.scripts]
prepare = "scripts.main:prepare"
gen = "scripts.main:generate"
stub = "scripts.main:generate_stub"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
testpaths = [
    "test",
]
