[project]
name = "robocute"
version = "0.1.0"
description = "Make Robotics Cute!"
readme = "README.md"
license = {file = "Licenses/Apache-2.0.txt"}
requires-python = ">=3.12"
dependencies = [
    "requests",
    "pytest>=9.0.1",
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "pydantic>=2.0.0",
    "numpy>=2.3.5",
    "mypy>=1.19.0",
]


[tool.uv]
conflicts = [
  [
    { extra = "cu128" },
    { extra = "cu130" },
  ],
]


[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[[tool.uv.index]]
name = "pytorch-cu130"
url = "https://download.pytorch.org/whl/cu130"
explicit = true

[tool.uv.workspace]
members = ["packages/*"]

[tool.uv.sources]
torch = [
  { index = "pytorch-cu128", extra = "cu128" },
  { index = "pytorch-cu130", extra = "cu130" },
]
torchvision = [
  { index = "pytorch-cu128", extra = "cu128" },
  { index = "pytorch-cu130", extra = "cu130" },
]
pyuipc = { workspace = true }


[project.optional-dependencies]
robotics = [
  "usd-core>=25.11",
]
uipc = [
  "pyuipc",
]
cu128 = [
  "torch>=2.9.1",
  "torchvision>=0.24.0",
  "diffusers>=0.35.2",
  "transformers>=4.57.3",
  "accelerate>=1.12.0",
]
cu130 = [
  "torch>=2.9.1",
  "torchvision>=0.24.0",
  "diffusers>=0.35.2",
  "transformers>=4.57.3",
  "accelerate>=1.12.0",
]
dev = [
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.0.0",
    "pymdown-extensions>=10.0.0",
    "mkdocs-i18n"
]


[project.scripts]
prepare = "scripts.main:prepare"
gen = "scripts.main:generate"
stub = "scripts.main:generate_stub"




[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
testpaths = [
    "test",
]
